-- DDL tham chieu H2 tu kiem thu; KHONG phai migration.
create table chat_messages (attachment_size bigint, created_at timestamp(6), id bigint generated by default as identity, user_id bigint, content varchar(2000), attachment_name varchar(255), attachment_type varchar(255), attachment_url varchar(255), sender varchar(255), primary key (id));
create table customer_addresses (default_address boolean not null, id bigint generated by default as identity, user_id bigint, address varchar(1000), phone varchar(255), receiver_name varchar(255), primary key (id));
create table customer_product_states (wishlisted boolean not null, id bigint generated by default as identity, product_id bigint, user_id bigint, viewed_at timestamp(6), primary key (id), unique (user_id, product_id));
create table endurance_tests (plank_seconds integer, pushup_reps integer, squat_reps integer, id bigint generated by default as identity, tested_at timestamp(6), user_id bigint not null unique, primary key (id));
create table exercises (calories_burned integer, default_duration_seconds integer, default_reps integer, default_sets integer, endurance_score integer, flexibility_score integer, is_active boolean, is_assessment boolean, maintenance_score integer, muscle_gain_score integer, rest_seconds integer, stamina_cost integer default 10, uses_weight boolean, weight_loss_score integer, id bigint generated by default as identity, contraindicated_injuries varchar(255), description varchar(255), image_url varchar(255), name varchar(255), secondary_muscle_groups varchar(255), video_url varchar(255), assessment_metric_type enum ('PLANK_SECONDS','PUSHUP_REPS','SQUAT_REPS'), difficulty enum ('EASY','HARD','MEDIUM'), muscle_group enum ('ARMS','BACK','CARDIO','CHEST','CORE','FULL_BODY','LEGS','SHOULDERS'), primary key (id));
create table foods (calories integer, fat_grams float(53), is_active boolean, protein_grams float(53), weight_grams float(53), id bigint generated by default as identity, image_url varchar(255), name varchar(255), suitable_goals varchar(255), ingredients clob, instructions clob, primary key (id));
create table injury_area_options (id bigint generated by default as identity, code varchar(100) not null, label varchar(100) not null, primary key (id), unique (code), unique (label));
create table invoices (price float(53), regenerate_count integer, cancelled_at timestamp(6), created_at timestamp(6), expires_at timestamp(6), id bigint generated by default as identity, membership_id bigint, paid_at timestamp(6), user_id bigint, qr_raw_payload varchar(1000), cosmetic_item_code varchar(255), deeplink varchar(255), momo_order_id varchar(255) unique, momo_request_id varchar(255), pay_url varchar(255), qr_code_url varchar(255), result_message varchar(255), transaction_id varchar(255), transfer_code varchar(255) unique, invoice_type enum ('COSMETIC','MEMBERSHIP'), membership_type enum ('FREE','VIP'), status enum ('CANCELLED','EXPIRED','FAILED','PAID','PENDING','REFUNDED'), primary key (id));
create table memberships (end_date date, is_active boolean, price float(53), start_date date, created_at timestamp(6), id bigint generated by default as identity, paid_at timestamp(6), user_id bigint, notes varchar(255), payment_method varchar(255), transaction_id varchar(255), membership_type enum ('FREE','VIP'), payment_status enum ('CANCELLED','EXPIRED','FAILED','PAID','PENDING','REFUNDED'), primary key (id));
create table muscle_split_configs (sessions_per_week integer not null, id bigint generated by default as identity, day_groups varchar(1000) not null, goal enum ('ENDURANCE','MAINTENANCE','MUSCLE_GAIN','WEIGHT_LOSS') not null, primary key (id), unique (goal, sessions_per_week));
create table notifications (is_read boolean, created_at timestamp(6), id bigint generated by default as identity, ref_id bigint, scheduled_at timestamp(6), sent_at timestamp(6), user_id bigint, message varchar(255), ref_type varchar(255), title varchar(255), type varchar(255), primary key (id));
create table pet_profiles (current_streak integer, missed_streak integer, web_count integer, last_calculated_at timestamp(6), user_id bigint not null, equipped_hair varchar(255), equipped_pants varchar(255), equipped_shirt varchar(255), aura_tier enum ('BLACK','BLUE','GREEN','NONE','PURPLE','RED','YELLOW'), stage enum ('AVERAGE','FIT','LEAN','OVERWEIGHT','SLIM'), primary key (user_id));
create table plan_muscle_group_weight (multiplier float(53), id bigint generated by default as identity, workout_plan_id bigint, muscle_group enum ('ARMS','BACK','CARDIO','CHEST','CORE','FULL_BODY','LEGS','SHOULDERS'), primary key (id), unique (workout_plan_id, muscle_group));
create table product_attribute_values (attribute_id bigint, id bigint generated by default as identity, value varchar(255) not null, primary key (id));
create table product_attributes (id bigint generated by default as identity, name varchar(255) not null unique, primary key (id));
create table product_reviews (rating integer, created_at timestamp(6), id bigint generated by default as identity, order_id bigint, product_id bigint, user_id bigint, comment varchar(2000), images varchar(20000), primary key (id));
create table product_variants (active boolean, price_override float(53), stock integer not null, id bigint generated by default as identity, product_id bigint, sku varchar(255), primary key (id));
create table progress_tracking (arm_cm float(53), bmi float(53), body_fat_percentage float(53), chest_cm float(53), height float(53), hip_cm float(53), muscle_mass_kg float(53), recorded_date date, thigh_cm float(53), waist_cm float(53), weight float(53), id bigint generated by default as identity, recorded_at timestamp(6), user_id bigint, notes varchar(255), source enum ('MANUAL','PROFILE','WEEKLY_CHECKOUT'), primary key (id));
create table recommended_schedule_configs (sessions_per_week integer not null, id bigint generated by default as identity, recommended_days varchar(30) not null, primary key (id), unique (sessions_per_week));
create table roles (id bigint generated by default as identity, role_name varchar(255) unique, primary key (id));
create table service_ratings (is_public boolean, rating integer, attachment_size bigint, created_at timestamp(6) not null, id bigint generated by default as identity, replied_at timestamp(6), reply_attachment_size bigint, updated_at timestamp(6), user_id bigint, admin_reply varchar(255), attachment_name varchar(255), attachment_type varchar(255), attachment_url varchar(255), comment varchar(255), reply_attachment_name varchar(255), reply_attachment_type varchar(255), reply_attachment_url varchar(255), service_type varchar(255), title varchar(255), primary key (id));
create table session_exercise_logs (completion_percent integer, duration_seconds integer, is_completed boolean, reps_completed integer, sets_completed integer, weight_used_kg float(53), exercise_id bigint, id bigint generated by default as identity, logged_at timestamp(6), session_id bigint, notes varchar(255), primary key (id));
create table shop_cart_items (quantity integer, id bigint generated by default as identity, product_id bigint, user_id bigint, variant_id bigint, variant_label varchar(255), primary key (id));
create table shop_inventory_movements (after_stock integer not null, before_stock integer not null, created_at timestamp(6), id bigint generated by default as identity, order_id bigint, product_id bigint, variant_id bigint, reason varchar(1000), actor varchar(255), primary key (id));
create table shop_order_events (created_at timestamp(6), id bigint generated by default as identity, order_id bigint, note varchar(1000), actor varchar(255), from_status varchar(255), to_status varchar(255), primary key (id));
create table shop_order_items (line_total float(53), quantity integer, unit_price float(53), id bigint generated by default as identity, order_id bigint, product_id bigint, variant_id bigint, image_url varchar(255), product_name varchar(255), variant_label varchar(255), primary key (id));
create table shop_orders (discount float(53), shipping_fee float(53), subtotal float(53), total float(53), voucher_discount float(53), created_at timestamp(6), created_by_staff_id bigint, expires_at timestamp(6), id bigint generated by default as identity, paid_at timestamp(6), user_id bigint, note varchar(1000), qr_raw_payload varchar(1000), shipping_address varchar(1000), payment_url varchar(2000), gateway_reference varchar(255) unique, payment_method varchar(255), phone varchar(255), qr_code_url varchar(255), receiver_name varchar(255), transaction_id varchar(255), transfer_code varchar(255) unique, voucher_code varchar(255), channel enum ('ONLINE','POS'), status enum ('CANCELLED','COMPLETED','CONFIRMED','DELIVERED','EXPIRED','PAID','PENDING_PAYMENT','PREPARING','SHIPPING'), primary key (id));
create table shop_products (active boolean, price float(53) not null, sale_price float(53), stock integer not null, created_at timestamp(6), id bigint generated by default as identity, description varchar(2000), images varchar(20000), brand varchar(255), image_url varchar(255), name varchar(255) not null, required_equipment_code varchar(255), suitable_goals varchar(255), category enum ('EQUIPMENT','FOOD','SUPPLEMENT'), primary key (id));
create table support_messages (attachment_size bigint, created_at timestamp(6), id bigint generated by default as identity, session_id bigint, content varchar(2000), attachment_name varchar(255), attachment_type varchar(255), attachment_url varchar(255), sender_role varchar(255), primary key (id));
create table support_sessions (user_rating integer, accepted_at timestamp(6), admin_id bigint, closed_at timestamp(6), created_at timestamp(6), id bigint generated by default as identity, rated_at timestamp(6), user_id bigint, user_rating_comment varchar(1000), subject varchar(255), status enum ('ACTIVE','CLOSED','PENDING','REJECTED'), primary key (id));
create table system_configs (config_value float(53), category varchar(255), config_key varchar(255) not null, description clob, primary key (config_key));
create table user_cosmetic_ownership (id bigint generated by default as identity, purchased_at timestamp(6), user_id bigint not null, cosmetic_code varchar(255) not null, primary key (id), unique (user_id, cosmetic_code));
create table user_profiles (age integer, available_days_per_week integer, bmi float(53), body_fat_percentage float(53), date_of_birth date, height float(53), initial_weight float(53), preferred_session_duration integer, training_experience_months integer, weight float(53), id bigint generated by default as identity, user_id bigint unique, preferred_training_days varchar(500), available_equipment varchar(1000), disliked_exercises varchar(1000), injury_areas varchar(1000), daily_activity_level varchar(255), gender varchar(255), medical_conditions varchar(255), training_location varchar(255), fitness_level enum ('ADVANCED','BEGINNER','INTERMEDIATE'), goal enum ('ENDURANCE','MAINTENANCE','MUSCLE_GAIN','WEIGHT_LOSS'), primary key (id));
create table users (email_verified boolean, password_reset_attempts integer, status boolean, created_at timestamp(6) not null, id bigint generated by default as identity, password_reset_blocked_until timestamp(6), role_id bigint, email varchar(255) not null unique, full_name varchar(255), password varchar(255), phone varchar(255), verification_token varchar(255), primary key (id));
create table variant_attribute_values (value_id bigint not null, variant_id bigint not null, primary key (value_id, variant_id));
create table voucher_scope_products (product_id bigint, voucher_id bigint not null);
create table vouchers (active boolean, max_discount_amount float(53), min_order_amount float(53), usage_limit integer, used_count integer, value float(53), created_at timestamp(6), end_at timestamp(6), id bigint generated by default as identity, start_at timestamp(6), code varchar(255) unique, description varchar(255), scope_category enum ('EQUIPMENT','FOOD','SUPPLEMENT'), scope_type enum ('ALL','CATEGORY','PRODUCT'), type enum ('AMOUNT','PERCENT'), primary key (id));
create table weekly_reviews (rating integer, week_number integer, created_at timestamp(6) not null, id bigint generated by default as identity, user_id bigint, workout_plan_id bigint, comment varchar(255), primary key (id), unique (user_id, workout_plan_id, week_number));
create table work_shifts (cash_at_start float(53), cash_counted float(53), cash_difference float(53), expected_cash float(53), planned_end time(6), planned_start time(6), pos_bank_revenue float(53), pos_cash_revenue float(53), shift_date date, check_in_at timestamp(6), check_out_at timestamp(6), created_at timestamp(6), id bigint generated by default as identity, user_id bigint, handover_note varchar(2000), status enum ('CHECKED_IN','COMPLETED','SCHEDULED'), primary key (id));
create table workout_plan_days (day_of_week integer, id bigint generated by default as identity, workout_plan_id bigint, day_name varchar(255), primary key (id));
create table workout_plan_exercises (base_weight_kg float(53), current_recommended_weight_kg float(53), current_weight_kg float(53), duration_seconds integer, is_assessment boolean, order_index integer, recommended_weight_kg float(53), reps integer, rest_seconds integer, sets integer, weight_updated_week integer, exercise_id bigint, id bigint generated by default as identity, last_low_adjustment_log_id bigint, plan_day_id bigint, notes varchar(255), primary key (id));
create table workout_plans (current_mana integer, current_week integer, difficulty_adjustment integer, duration_weeks integer, estimated_weeks integer, exercises_adjustment integer, fitness_score integer, is_active boolean, is_ai_generated boolean, is_completed boolean, is_fitness_improvement boolean, is_template boolean, last_mana_regen_date date, last_training_date date, max_mana integer, reps_adjustment integer, required_max_session_mana_cost integer, sessions_per_week integer, sets_adjustment integer, starting_bmi float(53), starting_weight float(53), target_achieved boolean, target_baseline_value float(53), target_current_value float(53), target_goal_value float(53), target_metric_type tinyint check (target_metric_type between 0 and 2), week_start_date date, created_at timestamp(6), id bigint generated by default as identity, original_plan_id bigint, user_id bigint, confirmed_schedule_dows varchar(255), description varchar(255), plan_name varchar(255), weight_adjustment_note varchar(255), body_type enum ('CAN_DOI','CAO_GAY','CO_BAP','GAY_CAN_DOI','THUA_CAN','VAN_DONG_VIEN'), fitness_level enum ('AVERAGE','EXCELLENT','GOOD','WEAK'), goal enum ('ENDURANCE','MAINTENANCE','MUSCLE_GAIN','WEIGHT_LOSS'), target_level enum ('ADVANCED','BEGINNER','INTERMEDIATE'), primary key (id));
create table workout_sessions (checkout_body_fat float(53), checkout_weight float(53), completion_rate integer, duration_minutes integer, is_custom boolean, is_last_session_of_week boolean, scheduled_time time(6), session_date date, total_calories_burned integer, week_number integer, check_in_time timestamp(6), check_out_time timestamp(6), id bigint generated by default as identity, plan_day_id bigint, user_id bigint, workout_plan_id bigint, custom_session_name varchar(255), notes varchar(255), status enum ('CHECKED_IN','COMPLETED','SCHEDULED','SKIPPED'), primary key (id));
alter table if exists chat_messages add constraint FK6f0y4l43ihmgfswkgy9yrtjkh foreign key (user_id) references users;
alter table if exists endurance_tests add constraint FKd9vxrpb5twjfy69oh4ylxi9s7 foreign key (user_id) references users;
alter table if exists invoices add constraint FKf0ud32x089cpot2nc6wffvx1s foreign key (membership_id) references memberships;
alter table if exists invoices add constraint FKbwr4d4vyqf2bkoetxtt8j9dx7 foreign key (user_id) references users;
alter table if exists memberships add constraint FKdjormybfoo7f4i4d4r803qohb foreign key (user_id) references users;
alter table if exists notifications add constraint FK9y21adhxn0ayjhfocscqox7bh foreign key (user_id) references users;
alter table if exists pet_profiles add constraint FKmw3h9mxe6jdr5sdpacseolv4v foreign key (user_id) references users;
alter table if exists plan_muscle_group_weight add constraint FKcfcun8ui140ek88k811ad9oky foreign key (workout_plan_id) references workout_plans;
alter table if exists product_attribute_values add constraint FK1oveqdcusmrm22vlr6m0u2hnn foreign key (attribute_id) references product_attributes;
alter table if exists product_reviews add constraint FKpjkp4e8bg2rmfk15a078edmcg foreign key (order_id) references shop_orders;
alter table if exists product_reviews add constraint FKcoxyfwkln0kmd0v6dm0nwu6vw foreign key (product_id) references shop_products;
alter table if exists product_reviews add constraint FK58i39bhws2hss3tbcvdmrm60f foreign key (user_id) references users;
alter table if exists product_variants add constraint FKov6wbowgogkoxdcktnnmaly37 foreign key (product_id) references shop_products;
alter table if exists progress_tracking add constraint FKh1r8b58l1twigd32fxrnqos20 foreign key (user_id) references users;
alter table if exists service_ratings add constraint FKk3kk14103xgjb9ewuh99j7t03 foreign key (user_id) references users;
alter table if exists session_exercise_logs add constraint FKbc6cegh3ieay024pw08n4slj1 foreign key (exercise_id) references exercises;
alter table if exists session_exercise_logs add constraint FK929mqtvf6ry0n4brwu3evqrgt foreign key (session_id) references workout_sessions;
alter table if exists shop_cart_items add constraint FK2el850hkhg53fo1cofih9c1rj foreign key (product_id) references shop_products;
alter table if exists shop_cart_items add constraint FKpy65g507a8t1vw034ujrvunu0 foreign key (user_id) references users;
alter table if exists shop_order_items add constraint FKprcx34kogn2i7skf69p5xsrsg foreign key (order_id) references shop_orders;
alter table if exists shop_orders add constraint FKj4qixku05sstqepfps9jrq132 foreign key (user_id) references users;
alter table if exists support_messages add constraint FK935x199o54qdj17dvf8yjtwo0 foreign key (session_id) references support_sessions;
alter table if exists support_sessions add constraint FKl03r56r2w7s3f1i9cbnfpsqdg foreign key (admin_id) references users;
alter table if exists support_sessions add constraint FKhv1k4werw5fqwsfd6hsrk5q9q foreign key (user_id) references users;
alter table if exists user_profiles add constraint FKjcad5nfve11khsnpwj1mv8frj foreign key (user_id) references users;
alter table if exists users add constraint FKp56c1712k691lhsyewcssf40f foreign key (role_id) references roles;
alter table if exists variant_attribute_values add constraint FKjv9y2iru5ur6ba2h1weslev6q foreign key (value_id) references product_attribute_values;
alter table if exists variant_attribute_values add constraint FKo8u5luw970dfxra9ccv96ps0j foreign key (variant_id) references product_variants;
alter table if exists voucher_scope_products add constraint FKmcog9ktk4xnhdi82d5sycv45h foreign key (voucher_id) references vouchers;
alter table if exists weekly_reviews add constraint FKl5ikxrv39gruh5b3yb6kwodqg foreign key (user_id) references users;
alter table if exists weekly_reviews add constraint FKc86xvgli9b3avkijtrfhc4xo7 foreign key (workout_plan_id) references workout_plans;
alter table if exists work_shifts add constraint FK3oa821cd9hu32c47xi87wo0ni foreign key (user_id) references users;
alter table if exists workout_plan_days add constraint FKbuw2fb71p6gfwcdx5eh34rhrm foreign key (workout_plan_id) references workout_plans;
alter table if exists workout_plan_exercises add constraint FKl8kdtyeeevi0lq6nlvh1m82ms foreign key (exercise_id) references exercises;
alter table if exists workout_plan_exercises add constraint FKbxu99cyvwjka339iujie80e1q foreign key (plan_day_id) references workout_plan_days;
alter table if exists workout_plans add constraint FK4vr09ve028fenv5fb6e9akqlx foreign key (user_id) references users;
alter table if exists workout_sessions add constraint FKqd8tpqka1to5lwfalavrstlok foreign key (plan_day_id) references workout_plan_days;
alter table if exists workout_sessions add constraint FKfwqciawyjntpphp080wpa37ge foreign key (user_id) references users;
alter table if exists workout_sessions add constraint FKdw3vse82htpy2h57sr6klh7om foreign key (workout_plan_id) references workout_plans;